# Cortex-for-Codex

./: .gitignore  PM_guest_dashboard_prompt.txt  README.md  Sourceoftruth.md  Team_Space.txt  auth.db  docker-compose.yml  final_mcp_test.py  requirements-codex.txt  secondcortex_thesis.html  test_azure_migration.py
CodexCortex/: .gitignore  AGENTS.md  README.md  codexcortex_mcp.py  pyproject.toml
CodexCortex/.codex/: config.toml.example
CodexCortex/scripts/: run_tests.cmd  run_tests.ps1  setup_env.cmd  setup_env.ps1
CodexCortex/tests/: test_codexcortex_mcp.py
secondcortex-backend/: .env.example  Dockerfile  auth.db  config.py  create_local_runtime_zip.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  snapshot_fabricator.py
secondcortex-backend/agents/: executor.py  planner.py  retriever.py  simulator.py
secondcortex-backend/auth/: database.py  jwt_handler.py  routes.py
secondcortex-backend/models/: schemas.py
secondcortex-backend/projects/: __init__.py  database.py  routes.py
secondcortex-backend/runtime/: README_LOCAL_RUNTIME.md  start-local-runtime.ps1  start-local-runtime.sh
secondcortex-backend/scripts/: seed_demo_snapshots.py
secondcortex-backend/services/: azure_document_intelligence.py  azure_search.py  compression.py  external_ingest.py  human_interaction_harness.py  incident_archaeology.py  llm_client.py  payment_pipeline.py  rate_limiter.py  summary_service.py  token_refresh_service.py  vector_db.py
secondcortex-backend/teams/: routes.py  summary_routes.py
secondcortex-backend/tests/: conftest.py  mcp_benchmark_runner.py  (+45 more)
(+90 files in other folders)
